2018-04-03  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/upgrade_by_passwd.py (main): Fix for byte compare.
	* tool/gnuk_remove_keys_libusb.py (main): Likewise.

2018-04-02  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/gnuk_token.py (parse_kdf_data): New.
	* tool/kdf_calc.py: New.

	* tool/gnuk_remove_keys_libusb.py (main): Support KDF auth.
	* tool/upgrade_by_passwd.py (main): Likewise.

2018-03-30  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (rw_kdf): Support single-salt KDF.
	(gpg_do_get_initial_pw_setting): Likewise.
	(gpg_do_kdf_check): Likewise.

2018-03-22  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (rw_kdf): Do format validation earlier.

2018-03-13  NIIBE Yutaka  <gniibe@fsij.org>

	* src/flash.c [FLASH_UPGRADE_SUPPORT] (flash_terminate): Erase
	the page for upgrade public keys.

2018-02-12  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (rw_kdf): Return 0 when NULL.

2018-01-23  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.8.

	* src/Makefile (build/gnuk-vidpid.elf): Supply FILE here.
	* src/configure (output_vendor_product_serial_strings): For
	generating put-vid-pid-ver.sh, don't set FILE.

	* regnual/regnual.c (regnual_device_desc): Make this array as a
	template.
	* regnual/Makefile (regnual.elf): Substitute VID:PID.

2018-01-22  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (USER_PASSWD_MINLEN): New.
	(cmd_change_password): Check passphrase length.

2018-01-22  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_change_password): Remove access to private
	key with BY_ADMIN when it's becoming admin-less mode.

2018-01-19  NIIBE Yutaka  <gniibe@fsij.org>

	* src/binary-edit.sh: Copied from NeuG 1.0.8.  Exclude FILE.
	* src/configure (output_vid_pid_version): Generate a shell script.
	* src/Makefile (build/gnuk-vidpid.elf): New target.
	* src/usb_desc.c (device_desc): Make this array as a template.

	* chopstx: Update to 1.8.

2018-01-18  NIIBE Yutaka  <gniibe@fsij.org>

	* src/neug.c: Update from NeuG.
