@@ -1,5 +1,7 @@
 2018-04-03  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* src/openpgp-do.c (rw_kdf): Clear all auth state.
+
 	* tool/upgrade_by_passwd.py (main): Fix for byte compare.
 	* tool/gnuk_remove_keys_libusb.py (main): Likewise.
 
